--- a/departmentofwildlife.html
+++ b/departmentofwildlife.html
@@ -9,11 +9,11 @@
   <body>
     <div class="nav" style="background-image: url(images/deprtment.jpg)">
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/srilankanwildlife.html">Sri Lankan Wildlife</a>
-        <a href="/departmentofwildlife.html" class="activeNav">Department of wildlife</a>
-        <a href="/leopard.html">sri lankan leopard</a>
-        <a href="/animals.html">animals in sri lanka</a>
+        <a href="index.html">Home</a>
+        <a href="srilankanwildlife.html">Sri Lankan Wildlife</a>
+        <a href="departmentofwildlife.html" class="activeNav">Department of wildlife</a>
+        <a href="leopard.html">sri lankan leopard</a>
+        <a href="animals.html">animals in sri lanka</a>
       </nav>
     </div>
     <div class="departmentIntro">
