--- a/srilankanwildlife.html
+++ b/srilankanwildlife.html
@@ -9,11 +9,11 @@
   <body>
     <div class="nav" style="background-image: url(images/WildlifeBackground.webp)">
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/srilankanwildlife.html" class="activeNav">Sri Lankan Wildlife</a>
-        <a href="/departmentofwildlife.html">Department of wildlife</a>
-        <a href="/leopard.html">sri lankan leopard</a>
-        <a href="/animals.html">animals in sri lanka</a>
+        <a href="index.html">Home</a>
+        <a href="srilankanwildlife.html" class="activeNav">Sri Lankan Wildlife</a>
+        <a href="departmentofwildlife.html">Department of wildlife</a>
+        <a href="leopard.html">sri lankan leopard</a>
+        <a href="animals.html">animals in sri lanka</a>
       </nav>
       <h1>"wildlife exploration in sri lanka"</h1>
     </div>
